--- a/pages/equipment/equipment.wxml
+++ b/pages/equipment/equipment.wxml
@@ -1,7 +1,9 @@
-<view class="container">
-  <view wx:for="{{devices}}" wx:key="index" bindtap="goToBluetooth" data-device="{{item}}" class="device-item">
-    <text>{{item.name}}</text>
-    <text>{{item.signalStrength}}</text>
+
+  <view class="container">
+    <view wx:for="{{devices}}" wx:key="deviceID" bindtap="goToBluetooth" data-device="{{item}}" class="device-item">
+      <text>{{item.name}}</text>
+      <text>{{item.signalStrength}}</text>
+    </view>
   </view>
-</view>
+
   
