--- a/pages/bluetooth/bluetooth.wxss
+++ b/pages/bluetooth/bluetooth.wxss
@@ -1,4 +1,4 @@
-.button-container {
+.STA-container {
   display: flex;
   justify-content: space-around;  /* 水平分布按钮 */
   margin: 20px 0;                 /* 上下间距 */
