--- a/pages/instrumentBoard/instrumentBoard.wxml
+++ b/pages/instrumentBoard/instrumentBoard.wxml
@@ -1,31 +1,31 @@
 <!--pages/instrumentBoard/instrumentBoard.wxml-->
-<view class="container">
-
-  <view class="receive-area">
-    <text>received: {{receivedData}}</text>
-  </view>
-
-  <view class = "battery-button">
-    <button class="command-button" bindtap="sendCommand" data-command="batterylock$">打开电池仓锁</button>
-    <button class="command-button" bindtap="sendCommand" data-command="unbatterylock$">关闭电池仓锁</button>
-  </view>
-
-  <view>
-    <view wx:if="{{Batterylockstate === 0}}">
-      <image src="/image/off.jpg" mode="aspectFill"></image>
+<view class="pages">
+  <view class = "n">
+    <view class = "speed">
+      <text class = "speedbig">{{speed}}</text>
+      <text class = "speedsmall">Km/h</text>
     </view>
-    <view wx:if="{{Batterylockstate === 1}}">
-      <image src="/image/on.jpg" mode="aspectFill"></image>
+    <view class = "onspeed">
+      <view class = "lineon">
+        <text class = "time">用时:{{time}}min</text>
+        <view wx:if = "{{device.signalStrength > -65}}" class = "signal">
+          <image class = "signalima" src = "/image/good.png"></image>
+        </view>
+        <view wx:if = "{{device.signalStrength <= -65 && device.signalStrength>-75}}" class = "signal">
+          <image class = "signalima" src = "/image/high.png"></image>
+        </view>
+        <view wx:if = "{{device.signalStrength <= -75 && device.signalStrength>-80}}" class = "signal">
+          <image class = "signalima" src = "/image/middle.png"></image>
+        </view>
+        <view wx:if = "{{device.signalStrength <= -80}}" class = "signal">
+          <image class = "signalima" src = "/image/low.png"></image>
+        </view>
+      </view>
+      <view class="horizontal-line"></view>
+      <text class = "distance">里程:{{itinerary}}Km</text>
     </view>
   </view>
-
-  <view class = "cycling data">
-    <text>速度:{{speed}}Km/h</text>
-    <text>本次行驶路程:{{itinerary}}Km</text>
-    <text>本次骑行时间:{{time}}min</text>
-  </view>
-
   <view class = "stopderiving">
-    <button class ="stop-button" bindtap="settleAccountAndsendCommand" data-command="unbikelock$">结束骑行</button>
+    <button class ="stop-button" bindtap="settleAccountAndsendCommand" data-command="unbikelock$"><image class = "close" src = "/image/close.png"></image></button>
   </view>
 </view>
