--- a/pages/bluetooth/bluetooth.wxml
+++ b/pages/bluetooth/bluetooth.wxml
@@ -1,28 +1,65 @@
-<view class="container">
-  <view class="device-style">
-    <text>设备名称: {{device.name}}</text>
-    <text>信号强度: {{device.signalStrength}} dBm</text>
+<view class = "pages">
+  <view class = "box-container">
+    <view class="device-container">
+      <view class="device-style">
+        <text class = "name">{{device.name}}</text>
+        <view wx:if = "{{device.signalStrength > -65}}" class = "signal">
+          <image class = "signalima" src = "/image/good.png"></image>
+        </view>
+        <view wx:if = "{{device.signalStrength <= -65 && device.signalStrength>-75}}" class = "signal">
+          <image class = "signalima" src = "/image/high.png"></image>
+        </view>
+        <view wx:if = "{{device.signalStrength <= -75 && device.signalStrength>-80}}" class = "signal">
+          <image class = "signalima" src = "/image/middle.png"></image>
+        </view>
+        <view wx:if = "{{device.signalStrength <= -80}}" class = "signal">
+          <image class = "signalima" src = "/image/low.png"></image>
+        </view>
+      </view>
+      <view class="horizontal-line"></view>
+      <view class = "state">
+        <text class = "price">单价:{{price}}元/小时</text>
+        <text class = "battery">剩余电量:{{battery}}%</text>
+        <text class = "mileage">预计可行驶:{{mileageavailable}}千米</text>
+      </view>
+    </view>
+    <view class = "GPS">
+      <view class = "GPS-container">
+        <text class = "GP">通讯</text>
+        <image class = "GPSimage" src = "/image/gps.png"></image>
+      </view>
+      <view class="horizontal-line1"></view>
+      <view class = "GPSstate">
+        <text class = "no">此设备未装载</text>
+        <image class = "noimage" src= "/image/no.png"></image>
+      </view>
+    </view>
   </view>
-
-  <view class="STA-container">
-    <button class="command-button" bindtap="sendCommandAndGoToInstrumentBoard" data-command="bikelock$">开始骑行</button>
+  <view class = "batterystate">
+    <view class = "lockshow">
+      <text class = "batterytittle">电池锁状态</text>
+      <view class="horizontal-line2"></view>
+    <view class = "batteryimagesituation">
+      <view wx:if="{{Batterylockstate === 0}}">
+        <image class= "lockimage" src="/image/lockoff.png" ></image>
+      </view>
+      <view wx:if="{{Batterylockstate === 1}}">
+        <image class= "lockimage" src="/image/lockon.png" ></image>
+      </view>
+    </view>
+    </view>
+    <view class = "twobutton">
+      <view class = "HH">
+        <button class="command-button1" bindtap="sendCommand" data-command="batterylock$"><image class = "on" src = "/image/on.png"></image></button>
+        <text class = "lockremind">开锁</text>
+      </view>
+      <view class = "HH">
+        <button class="command-button2" bindtap="sendCommand" data-command="unbatterylock$"><image class = "off" src = "/image/off.png"></image></button>
+        <text class = "lockremind">关锁</text>
+      </view>
+    </view>
   </view>
-
-  <view class="receive-area">
-    <text>received: {{receivedData}}</text>
-  </view>
-
-  <view class = "battery-button">
-    <button class="command-button" bindtap="sendCommand" data-command="batterylock$">打开电池仓锁</button>
-    <button class="command-button" bindtap="sendCommand" data-command="unbatterylock$">关闭电池仓锁f</button>
-  </view>
-
   <view>
-    <view wx:if="{{Batterylockstate === 0}}">
-      <image src="/image/off.jpg" mode="aspectFill"></image>
-    </view>
-    <view wx:if="{{Batterylockstate === 1}}">
-      <image src="/image/on.jpg" mode="aspectFill"></image>
-    </view>
-  </view>
+    <button class="command-button3" bindtap="sendCommandAndGoToInstrumentBoard" data-command="bikelock$"><text class = "starttittle">我已知晓，现在开始骑行</text></button>
+  </view> 
 </view>
