--- a/pages/bluetooth/bluetooth.wxml
+++ b/pages/bluetooth/bluetooth.wxml
@@ -18,9 +18,9 @@
       </view>
       <view class="horizontal-line"></view>
       <view class = "state">
-        <text class = "price">单价:{{price}}元/小时</text>
-        <text class = "battery">剩余电量:{{battery}}%</text>
-        <text class = "mileage">预计可行驶:{{mileageavailable}}千米</text>
+        <text class = "price">单价:{{price}}/小时</text>
+        <text class = "battery">剩余电量:{{batteryPower}}</text>
+        <text class = "mileage">预计可行驶:{{mileageavailable}}</text>
       </view>
     </view>
     <view class = "GPS">
@@ -40,6 +40,9 @@
       <text class = "batterytittle">电池锁状态</text>
       <view class="horizontal-line2"></view>
     <view class = "batteryimagesituation">
+      <view wx:if="{{Batterylockstate === -1}}">
+        <image class= "findimage" src="/image/finding.png" ></image>
+      </view>
       <view wx:if="{{Batterylockstate === 0}}">
         <image class= "lockimage" src="/image/lockoff.png" ></image>
       </view>
@@ -53,11 +56,10 @@
         <button class="command-button1" bindtap="sendCommand" data-command="batterylock$"><image class = "on" src = "/image/on.png"></image></button>
         <text class = "lockremind">开锁</text>
       </view>
-      <view class = "HH">
-        <button class="command-button2" bindtap="sendCommand" data-command="unbatterylock$"><image class = "off" src = "/image/off.png"></image></button>
-        <text class = "lockremind">关锁</text>
-      </view>
     </view>
+  </view>
+  <view class = "separator">
+    <text class = "separator-line">——————·关锁只需按下坐垫即可·——————</text>
   </view>
   <view>
     <button class="command-button3" bindtap="sendCommandAndGoToInstrumentBoard" data-command="bikelock$"><text class = "starttittle">我已知晓，现在开始骑行</text></button>
