--- a/pages/bluetooth/bluetooth.wxss
+++ b/pages/bluetooth/bluetooth.wxss
@@ -96,7 +96,7 @@
   opacity:0.7;
   position: relative;
   top:20rpx;
-  right: 30rpx;
+  right: 33rpx;
   width: 250rpx;
   height: 250rpx;
   border-radius:30rpx ;
@@ -170,6 +170,14 @@
   width: 120rpx;
 }
 
+.findimage{
+  position: relative;
+  left:40rpx;
+  top:20rpx;
+  height: 120rpx;
+  width: 120rpx;
+}
+
 .lockshow{
   position: relative;
   top:-10rpx;
@@ -189,13 +197,6 @@
   right: 6rpx;
 }
 
-.off{
-  height: 80rpx;
-  width: 80rpx;
-  position: relative;
-  top:20rpx;
-  right: 6rpx;
-}
 
 .twobutton{
   display: flex;
@@ -205,26 +206,15 @@
   top:-10rpx;
 }
 
-.HH{
-  display: flex;
-  flex-direction: column;
-}
 
 .command-button1{
   background-color: #0066FF;
   height: 120rpx;
   width: 120rpx;
   border-radius:50%;
-  margin-right: 60rpx;
+  margin-right: 80rpx;
 }
 
-.command-button2{
-  background-color: #FF0000 ;
-  height: 120rpx;
-  width: 120rpx;
-  border-radius:50%;
-  margin-right: 60rpx;
-}
 
 .horizontal-line2{
   height: 1px; /* 线的高度 */
@@ -240,6 +230,22 @@
   font-weight: bold;
   font-size: 30rpx;
   margin-left: 27rpx;
+}
+
+.separator{
+  position: relative;
+  top:20rpx;
+  width: calc(100% - 80rpx);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.separator-line{
+  color: grey;
+  opacity: 0.8;
+  margin-left: 70rpx;
+  font-size: 25rpx;
 }
 
 .command-button3{
