--- a/pages/instrumentBoard/instrumentBoard.wxss
+++ b/pages/instrumentBoard/instrumentBoard.wxss
@@ -9,12 +9,9 @@
   width: 500rpx;
   border-radius:50% ;
   background-color: #00FFFF;
-  position: relative;
-  top:250rpx;
-  left: 180rpx;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
-  transform: rotate(90deg);
 }
 
 .speedbig{
@@ -33,22 +30,23 @@
   font-style: italic;
   position: relative;
   left:200rpx;
+  bottom: 20rpx;
+  width: 200rpx;
 }
 
 .onspeed{
   margin-top: -70rpx;
-  margin-right: 30rpx;
+  margin-right: 10rpx;
   display: flex;
   flex-direction: column;
-  transform: rotate(90deg);
 }
 
 .signalima{
   height: 80rpx;
   width: 100rpx;
   position: relative;
-  right: 180rpx;
-  top: 270rpx;
+  right: 170rpx;
+  top: 60rpx;
 }
 
 .lineon{
@@ -59,8 +57,8 @@
 
 .time{
   position: relative;
-  right: -180rpx;
-  top: 280rpx;
+  right: -190rpx;
+  top: 70rpx;
   font-size: 37rpx;
   font-weight: bold;
   font-style:oblique;
@@ -72,24 +70,24 @@
   width: 400rpx;
   margin: 0rpx 10rpx; 
   position: relative;
-  top: 270rpx;
-  right: -150rpx;
+  top: 60rpx;
+  right: -160rpx;
 }
 
 .distance{
   color: white;
-  font-size: 30rpx;
+  font-size: 45rpx;
   font-weight: bold;
   font-style:oblique;
   position: relative;
-  top:80rpx;
-  left: 290rpx;
+  width: 300rpx;
+  bottom:120rpx;
+  left: 320rpx;
 }
 
 .stopderiving{
   position: relative;
-  transform: rotate(90deg);
-  top:260rpx;
+  bottom:100rpx ;
   right: 210rpx;
 }
 
@@ -101,6 +99,9 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  position: relative;
+  top: 400rpx;
+  left: 210rpx;
 }
 
 .close{
@@ -108,3 +109,46 @@
   width: 120rpx;
   margin-left: 4rpx;
 }
+
+.batterypowershow{
+  height: 60rpx;
+  width: 60rpx;
+  margin-bottom: 24rpx;
+  margin-left: 30rpx;
+}
+
+.powertittle{
+  font-size: 35rpx;
+  font-weight: bold;
+  margin-left: 10rpx;
+}
+
+.showbattery{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  bottom: 150rpx;
+  right: 80rpx;
+  width: calc(100% - 430rpx);
+}
+
+.dis{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  bottom: 90rpx;
+}
+
+.bike{
+  height: 70rpx;
+  width: 70rpx;
+}
+
+.long{
+  font-size: 32rpx;
+  font-weight: bold;
+  margin-left: 10rpx;
+}
+
