--- a/pages/instrumentBoard/instrumentBoard.wxss
+++ b/pages/instrumentBoard/instrumentBoard.wxss
@@ -1,336 +1,662 @@
 .pages{
   background: linear-gradient(to bottom, #99BBFF, white);
-  padding: 4rpx;
-  height: 500rpx
+  padding-top: 4rpx;
+  height: 1000rpx
 }
 
-.hide{
-  height: 1300rpx;
-  overflow: hidden;
+.prompt{
+  position: absolute ;
+  width: 100%;
+  height: 80rpx;
+  opacity: 0.5;
+  background-color: white;
+  display: flex;
+  flex-direction:row;
 }
 
-.speed{
-  height: 500rpx;
-  width: 500rpx;
-  border-radius:50% ;
+.connect-prompt{
+  font-size: 36rpx;
+  font-weight:lighter;
+  margin-top:16rpx;
+  margin-left: 80rpx;
+}
+
+.connect-buttonchoose{
+  margin-top: 10rpx;
+  margin-right: 100rpx;
+  height: 60rpx;
+  width: 110rpx;
   background-color: #00BBFF;
-  margin: 0 auto;
+  opacity: 0.8;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius:20rpx ;
+}
+
+.connect-button-script{
+  color: white;
+  font-size: 28rpx;
+  font-weight:bolder;
+  margin-bottom: 0rpx;
+}
+
+.devicechoosePage{
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  z-index: 10;
   display: flex;
   flex-direction: column;
 }
 
-.speedbig{
-  color: white;
-  font-weight: bold;
-  font-size: 250rpx;
-  position: relative;
-  left:100rpx;
-  top:30rpx;
+.blackBlock{
+  height: 500rpx;
+  background-color: #000000;
+  opacity: 0.25;
 }
 
-.speedsmall{
-  color: white;
-  font-weight: bold;
-  font-size: 40rpx;
-  font-style: italic;
-  position: relative;
-  left:200rpx;
-  bottom: 20rpx;
-  width: 200rpx;
+.devicechooseBlock{
+  background: linear-gradient(to bottom, #CCEEFF, white);
+  height: 970rpx;
 }
 
-.onspeed{
-  margin-top: -70rpx;
-  margin-right: 10rpx;
+.devicechooseBlockTitle{
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
 }
 
-.signalima{
+.backbutton{
+  background-color: #00BBFF;
+  margin-left: 0;
+  height: 80rpx;
+  width: 120rpx;
+  margin-top: 10rpx;
+  margin-left: 10rpx;
+}
+
+.backimage{
   height: 80rpx;
   width: 100rpx;
   position: relative;
-  right: 170rpx;
-  top: 60rpx;
+  right: 14rpx;
 }
 
-.lineon{
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.time{
-  position: relative;
-  right: -190rpx;
-  top: 70rpx;
-  font-size: 37rpx;
-  font-weight: bold;
-  font-style:oblique;
-}
-
-.horizontal-line{
-  height: 3px; /* 线的高度 */
-  background-color: #000000; /* 线的颜色 */
+.backtitleBox{
   width: 400rpx;
-  margin: 0rpx 10rpx; 
-  position: relative;
-  top: 60rpx;
-  right: -160rpx;
-}
-
-.distance{
-  color: white;
-  font-size: 45rpx;
-  font-weight: bold;
-  font-style:oblique;
-  position: relative;
-  width: 300rpx;
-  bottom:120rpx;
-  left: 320rpx;
-}
-
-.stopderiving{
-  position: relative;
-  bottom:100rpx ;
-  right: 210rpx;
-}
-
-.stop-button{
-  height: 180rpx;
-  width: 180rpx;
-  border-radius: 50%;
-  background-color: #FF0000 ;
+  margin-right: 130rpx;
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  position: relative;
-  top: -160rpx;
-  left: 210rpx;
 }
 
-.close{
+.backTitle{
+  font-size: 44rpx;
+  font-weight: bold;
+  margin-left: 75rpx;
+}
+
+.deviceChooseLine{
+  height: 2rpx;
+  background-color: black;
+  margin:10rpx 0rpx 10rpx 0rpx;
+}
+
+.devicechooseList{
+  margin: 0 auto;
+  width: 100%; /* 设置宽度为 100% */
+  max-width: 1100rpx;
+  max-height: 800rpx;
+  width: calc(100% - 40rpx);
+  overflow-y: auto;
+}
+
+.device-item{
+  width: 100%;
+  height: 140rpx;
+  margin-top: 20rpx;
+  margin-bottom: 20rpx;
+}
+
+.itemStyle{
+  display:flex ;
+  flex-direction: row;
+  background-image: linear-gradient(to right, #CCDDFF, #DDDDDD);
+  border-radius: 50rpx;
+}
+
+.device{
+  display: flex;
+  flex-direction: row;
+}
+
+.device{
+  height: 140rpx;
+}
+
+.devicename{
+  margin-left: 0rpx;
+  margin-top: 40rpx;
+  height: 60rpx;
+  width: 300rpx;
+  display: flex;
+  align-items: center;
+}
+
+.itemchar{
+  display: inline-block;
+  width: 7em;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  font-size: 60rpx;
+  font-weight: bold;
+  color: white;
+  margin-left: 20rpx;
+}
+
+.devicePrice{
+  display:flex;
+  align-items: center;
+  margin-top: 10rpx;
+  margin-left: 20rpx;
+
+}
+
+.price{
+  font-size: 38rpx;
+  font-style: italic;
+  font-weight: bold;
+  margin-left: 36rpx;
+}
+
+
+.fristBox{
+  width: 100%;
+  height: 530rpx;
+  display: flex;
+  flex-direction: row;
+  margin-top: 20rpx;
+}
+
+.batteryBlock{
+  width: 180rpx;
+  height: 500rpx;
+  margin-top: 30rpx;
+  margin-left: 30rpx;
+  display: flex;
+  flex-direction: column;
+}
+
+.batteryBlockList{
+  background-color: #CCEEFF;
   height: 120rpx;
-  width: 120rpx;
-  margin-left: 4rpx;
+  display: flex;
+  flex-direction: row;
+  border-radius: 20rpx 60rpx 60rpx 20rpx;  
 }
 
 .batterypowershow{
+  margin-top: 26rpx;
   height: 60rpx;
   width: 60rpx;
-  margin-bottom: 24rpx;
-  margin-left: 30rpx;
 }
 
 .powershow{
   display: flex;
   flex-direction: column;
+  margin-top: 23rpx;
 }
 
 .powertittle{
-  font-size: 28rpx;
+  font-size: 26rpx;
   font-weight: bold;
-  position: relative;
-  left: 10rpx;
-  bottom: 20rpx;
+  margin-left: 12rpx;
+  margin-top: 5rpx;
 }
 
-.showbattery{
+.signalList{
+  background-color: #CCEEFF;
+  height: 120rpx;
+  margin-top: 7rpx;
+  width: 180rpx;
+  border-radius: 20rpx 60rpx 60rpx 20rpx; 
   display: flex;
-  align-items: center;
-  justify-content: center;
-  position: relative;
-  bottom: 120rpx;
-  right: 80rpx;
-  width: calc(100% - 430rpx);
+  flex-direction: row;
 }
 
-.dis{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: relative;
-  bottom: 90rpx;
+.prepositonScript{
+  height: 120rpx;
+  width: 60rpx;
+  border-radius: 20rpx;
+  background-color: #9F88FF ;
 }
 
-.bike{
-  height: 70rpx;
-  width: 70rpx;
-}
-
-.long{
+.signaltittle{
+  writing-mode: vertical-rl;
+  text-align: center;
   font-size: 32rpx;
   font-weight: bold;
-  margin-left: 10rpx;
+  margin-top: 25rpx;
+  margin-left: 9rpx;
 }
 
-.unspeed{
-  height: 500rpx;
-  width: 500rpx;
-  border-radius:50% ;
-  background-color: #BBFFEE;
-  margin: 0 auto;
+.signalima{
+  height:90rpx;
+  width: 110rpx;
+  margin-top: 10rpx;
+}
+
+.timeList{
+  background-color: #CCEEFF;
+  height: 120rpx;
+  margin-top: 7rpx;
+  width: 180rpx;
+  border-radius: 20rpx 60rpx 60rpx 20rpx; 
+  display: flex;
+  flex-direction: row;
+}
+
+.time1{
+  font-size: 38rpx;
+  font-weight: bold;
+  margin-left: 16rpx;
+  margin-top: 16rpx;
+}
+
+.time2{
+  font-size: 32rpx;
+  font-weight: bold;
+  margin-top: -10rpx;
+  margin-left: 3rpx;
+}
+
+.timeAndDistance{
   display: flex;
   flex-direction: column;
-}
-
-.stop-button1{
-  height: 180rpx;
-  width: 180rpx;
-  border-radius: 50%;
-  background-color: #DDDDDD ;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  position: relative;
-  top: 580rpx;
-  left: 210rpx;
-}
-
-.nonow{
-  font-size: 37rpx;
-  font-weight: bold;
-  position: relative;
-  top: 96rpx;
-  left: 260rpx;
-}
-
-.horizontal-line1{
-  height: 3px; /* 线的高度 */
-  background-color: #000000; /* 线的颜色 */
-  width: 400rpx;
-  margin: 0rpx 10rpx; 
-  position: relative;
-  top: 100rpx;
-  right: -160rpx;
-}
-
-.close1{
-  height: 120rpx;
-  width: 120rpx;
   margin-left: 15rpx;
 }
 
-.stop-button2{
-  height: 180rpx;
+.distanceList{
+  background-color: #CCEEFF;
+  height: 120rpx;
+  margin-top: 7rpx;
   width: 180rpx;
-  border-radius: 50%;
-  background-color: #CCFF99 ;
+  border-radius: 20rpx 60rpx 60rpx 20rpx;  
   display: flex;
-  align-items: center;
-  justify-content: space-between;
-  position: relative;
-  top: -160rpx;
-  left: 210rpx;
+  flex-direction: row;
 }
 
-.separator-line{
-  color: grey;
-  opacity: 0.8;
-  position: relative;
-  left: 90rpx;
-  bottom: 90rpx;
-  font-size: 25rpx;
+.distance1{
+  font-size: 38rpx;
+  font-weight: bold;
+  margin-left: 16rpx;
+  margin-top: 16rpx;
 }
 
-.batterystate{
-  position: relative;
-  bottom: 60rpx;
-  left: 0rpx;
-  width: 180rpx;
+.distance2{
+  font-size: 32rpx;
+  font-weight: bold;
+  margin-top: -10rpx;
+  margin-left: 7rpx;
+}
+
+.speedBlock{
+  background-color: #99FFFF;
+  width: 500rpx;
   height: 500rpx;
-  background-color: #AAFFEE;
+  border-radius: 0 250rpx 250rpx 0;
+  margin-top: 30rpx;
   display: flex;
   flex-direction: column;
-  border-radius: 0 70rpx 70rpx 0;
 }
 
-.findimage{
+
+.speedBox{
+  height: 360rpx;
+  width: 500rpx;
+  display: flex;
+  flex-direction: row;
+}
+
+.speedbigBox{
+  height: 360rpx;
+  width: 360rpx;
+  margin-top: 20rpx;
+}
+
+.speedbig{
+  font-size: 290rpx;
   position: relative;
-  left:0rpx;
-  top:0rpx;
-  height: 120rpx;
-  width: 120rpx;
+  top: 30rpx;
+  left: 10rpx;
 }
 
-.lockimage{
-  position: relative;
-  top: 10rpx;
-  left:10rpx;
-  height: 120rpx;
-  width: 120rpx;
-}
-
-.on{
+.speedsmallBox{
+  margin-top:280rpx ;
   height: 80rpx;
-  width: 80rpx;
-  position: relative;
-  top:15rpx;
-  right: 8rpx;
+  width: 360rpx;
 }
 
-.lockshow{
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  position: relative;
-  top: 70rpx;
-}
-
-.HH{
-  position: relative;
-  top: 140rpx;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.batterytittle{
-  font-size: 30rpx;
+.speedsmall{
+  font-size: 44rpx;
+  font-style: italic;
   font-weight: bold;
+  color: white;
+}
+
+.journeyBox{
+  height: 140rpx;
+  width: 500rpx;
+  display: flex;
+  flex-direction: column;
+}
+
+.longtittle{
+  margin-top: 15rpx;
+  margin-left: 20rpx;
+  font-size: 36rpx;
+  font-weight: bold;
+}
+
+.long{
+  font-size: 45rpx;
+  font-weight: bold;
+  margin-left: 140rpx;
+}
+
+.secondBox{
+  width: 100%;
+  height: 500rpx;
+  margin-top: 50rpx;
+  display: flex;
+  flex-direction: row;
+}
+
+.batteyList{
+  height: 100%;
+  width: 230rpx;
+  background-image: linear-gradient(to right, #FFFFFF, #CCBBFF );
+  border-radius: 0 60rpx 60rpx 0;
+}
+
+.batteryState{
+  margin-top: 40rpx;
+  opacity: 0.7;
+}
+
+.batterystatetitle{
+  margin-left: 8rpx;
+  font-size: 32rpx;
+  font-weight: bold;
+}
+
+.batterySeize{
+  width: 100%;
+  height: 150rpx;
+  display: flex;
+  flex-direction: row;
+}
+
+.stateshow{
+  background-color: #FFFFFF;
+  height: 130rpx;
+  width: 130rpx;
+  margin-top: 15rpx;
+  margin-left: 15rpx;
+  border-radius: 40rpx 0 0 40rpx;
+}
+
+.statemind{
+  background-color: #B088FF;
+  height: 130rpx;
+  width: 45rpx;
+  margin-top: 15rpx;
+  border-radius: 0 20rpx 20rpx 0;
+}
+
+.batterystateimage{
+  width: 100rpx;
+  height: 100rpx;
+  margin-top: 20rpx;
+  margin-left: 20rpx;
+}
+
+.batterystatemid{
+  font-size: 32rpx;
   writing-mode: vertical-rl;
-}
-
-.lockremind{
-  font-size: 30rpx;
   font-weight: bold;
-  writing-mode: vertical-rl
+  margin-top: 16rpx;
 }
 
-.command-button1{
-  width: 120rpx;
-  height: 120rpx;
-  border-radius:50% ;
-  background-color: 	#33CCFF;
-}
-
-.exit{
-  background-color: #AAFFEE;
-  border-radius: 40rpx 0 0 40rpx;
-  height: 150rpx;
-  width: 180rpx;
-  position: relative;
-  left: 325rpx;
-  bottom: 600rpx;
-}
-
-.ee{
-  font-size: 40rpx;
+.noLink{
+  font-size: 32rpx;
+  writing-mode: vertical-rl;
   font-weight: bold;
-  margin-top: 60rpx;
-  position: relative;
-  right: 30rpx;
+  margin-top: 16rpx;
 }
 
-.exit1{
-  background-color: #AAFFEE;
-  border-radius: 40rpx 0 0 40rpx;
-  height: 150rpx;
-  width: 180rpx;
-  position: relative;
-  left: 325rpx;
-  top: 200rpx;
+.dotobattery{
+  margin-top: 40rpx;
+  opacity: 0.7;
 }
+
+.whatcando{
+  margin-left: 8rpx;
+  font-size: 32rpx;
+  font-weight: bold;
+}
+
+.batterystatemid1{
+  font-size: 32rpx;
+  writing-mode: vertical-rl;
+  font-weight: bold;
+  margin-top: 16rpx;
+  margin-right: 0rpx;
+}
+
+.buttonseize{
+  width: 100%;
+  height: 150rpx;
+  display: flex;
+  flex-direction: row;
+}
+
+.batterycommandleft{
+  background-color: #00BBFF;
+  height: 130rpx;
+  width: 130rpx;
+  margin-top: 15rpx;
+  margin-left: 15rpx;
+  border-radius: 40rpx 0 0 40rpx;
+}
+
+.batterycommandleft1{
+  background-color: #DDDDDD;
+  height: 130rpx;
+  width: 130rpx;
+  margin-top: 15rpx;
+  margin-left: 15rpx;
+  border-radius: 40rpx 0 0 40rpx;
+}
+
+.titleBox{
+  background-color: #B088FF;
+  height: 130rpx;
+  width: 45rpx;
+  margin-top: 15rpx;
+  position: relative;
+  left: -19rpx;
+  border-radius: 0 20rpx 20rpx 0;
+}
+
+.titleBoxcannobind{
+  background-color: #B088FF;
+  height: 130rpx;
+  width: 45rpx;
+  margin-top: 15rpx;
+  position: relative;
+  left: -15rpx;
+  border-radius: 0 20rpx 20rpx 0;
+}
+
+.batterycommandtitle{
+  font-size: 29rpx;
+  writing-mode: vertical-rl;
+  font-weight: bold;
+  margin-top: 10rpx;
+  margin-left: 5rpx;
+}
+
+.openlockimage{
+  width: 90rpx;
+  height: 90rpx;
+  margin-top: 20rpx;
+}
+
+.bikelockList{
+  height: 100%;
+  width:  390rpx;
+  display: flex;
+  flex-direction:column ;
+}
+
+.b1{
+  width: 100%;
+  height: 60%;
+}
+
+.changebutton{
+  height: 150rpx;
+  width: 150rpx;
+  border-radius: 50%;
+  background-color: #00BBFF;
+  display: flex;
+  align-items: center;
+  margin-top: 50rpx;
+}
+
+.changeimage{
+  height: 100rpx;
+  width: 100rpx;
+}
+
+.changeScript{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 20rpx;
+}
+
+.changetitle{
+  font-size: 36rpx;
+  font-weight: bold;
+}
+
+.b2{
+  height: 40%;
+}
+
+.buttonBox{
+  width: 100%;
+  height: 300rpx;
+  margin-top: 120rpx;
+}
+
+.lockbutton1{
+  height: 210rpx;
+  width: 210rpx;
+  border-radius: 50%;
+  background-color: 	#AAAAAA;
+}
+
+.lockbutton2{
+  height: 210rpx;
+  width: 210rpx;
+  border-radius: 50%;
+  background-color: 	#CCFF99;
+}
+
+.lockbutton3{
+  height: 210rpx;
+  width: 210rpx;
+  border-radius: 50%;
+  background-color: 	#FF0000 ;
+}
+
+.closeimage{
+  width: 140rpx;
+  height: 140rpx;
+  margin-top: 40rpx;
+}
+
+.startimage{
+  width: 140rpx;
+  height: 140rpx;
+  margin-top: 40rpx;
+}
+
+.lockremind1{
+  margin-left: 45rpx;
+  position: relative;
+  top:25rpx;
+}
+
+.lockremindtitle1{
+  font-weight: bold;
+  font-size: 33rpx;
+}
+
+.lockremindtitle2{
+  font-weight: bold;
+  font-size: 33rpx;
+  margin-left: 138rpx;
+}
+
+.lockremindtitle3{
+  font-weight: bold;
+  font-size: 33rpx;
+  margin-left: 100rpx;
+}
+
+.userList{
+  height: 40%;
+  width: 230rpx;
+  margin-top: 150rpx;
+}
+
+.userTap{
+  height: 100%;
+  width: calc(100% - 40rpx);
+  margin-left: 40rpx;
+  background-color: #263c44;
+  border-radius: 50rpx 0 0 50rpx;
+}
+
+.user{
+  height: 100%;
+  background-color: #00BBFF;
+  border-radius: 50rpx 0 0 50rpx;
+  display: flex;
+  flex-direction: column;
+}
+
+.userpage{
+
+  width: 90rpx;
+  height: 90rpx;
+  margin-top: 40rpx;
+  margin-left: 20rpx;
+}
+
+.username{
+  margin-left: 10rpx;
+}
+
+.usertitle{
+  font-size: 32rpx;
+  font-weight: bold;
+}
+
 
 
 
